--- a/src/styles.css
+++ b/src/styles.css
@@ -174,6 +174,8 @@ h1 {
   animation: slideUp 750ms cubic-bezier(0, 0.72, 0.24, 1.02);
   border-radius: 4px 4px 0px 0px;
   will-change: transform;
+  display: flex;
+  justify-content: space-evenly;
 }
 
 .happy.banner {
@@ -194,6 +196,24 @@ h1 {
   margin: -1px;
   padding: 0;
   border: 0;
+}
+
+/*
+  Restart button styles
+*/
+.banner button {
+  width: 50px;
+  text-align: center;
+  background-color: white;
+  border-radius: 4px;
+}
+
+.banner button.sad {
+  color: var(--color-error);
+}
+
+.banner button.happy {
+  color: var(--color-success);
 }
 
 /*
